--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Pacman</title>
+        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <link rel="stylesheet" type="text/css" href="styles.css">
         <script src="bower_components/jquery/dist/jquery.min.js"></script>
         <script src="script.js"></script>
