--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
         <title>Pacman</title>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <link rel="stylesheet" type="text/css" href="styles.css">
-        <script src="bower_components/jquery/dist/jquery.min.js"></script>
+        <script
+          src="https://code.jquery.com/jquery-3.1.1.min.js"
+          integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+          crossorigin="anonymous"></script>
         <script src="script.js"></script>
     </head>
     <body>
